--- a/configs/base_default.yaml
+++ b/configs/base_default.yaml
@@ -1,7 +1,7 @@
 main:
   env: CarRacing-v0 # required=True, help="name of the environment to train on (REQUIRED)")
   seed: 0 # type=int, default=1, help="random seed (default: 1)")
-  procs: 4 # type=int, default=16, help="number of processes (default: 16)") # number of envs
+  procs: 32 # type=int, default=16, help="number of processes (default: 16)") # number of envs
   actual_procs: 12 # type=int, default=16, help="number of processes (default: 16)")
   frames: 2.e+7 # type=int, default=10**7, help="number of frames of training (default: 10e7)")
   log_interval: 1 # type=int, default=1, help="number of updates between two logs (default: 1)")
@@ -20,6 +20,7 @@ env_cfg:
   wrapper: ["car_racing"]
   no_eval_envs: 0
   no_actions: 6 # 7 is for done
+  master_make_envs: false
 
 agent:
   name: PPO
