--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -2,7 +2,7 @@ main:
   env: CarRacing-v0 # required=True, help="name of the environment to train on (REQUIRED)")
   seed: 0 # type=int, default=1, help="random seed (default: 1)")
   procs: 8 # type=int, default=16, help="number of processes (default: 16)") # number of envs
-  frames: 2.e+7 # type=int, default=10**7, help="number of frames of training (default: 10e7)")
+  frames: 1.e+7 # type=int, default=10**7, help="number of frames of training (default: 10e7)")
   log_interval: 1 # type=int, default=1, help="number of updates between two logs (default: 1)")
   eval_interval: 0
   save_interval: 10 # type=int, default=0, help="number of updates between two saves (default: 0, 0 means no saving)")
@@ -24,23 +24,24 @@ env_cfg:
   wrapper: ["car_racing"]
   no_eval_envs: 0
   master_make_envs: false
-  no_stacked_frames: 8
+  no_stacked_frames: 4
 
 agent:
   name: PPO
-  frames_per_proc: 100 # type=int, default=None, help="number of frames per process before update(default: 5 for A2C and 128 for PPO)")
+  frames_per_proc: 128 # type=int, default=None, help="number of frames per process before update(default: 5 for A2C and 128 for PPO)")
   discount: 0.99 # type=float, default=0.99, help="discount factor (default: 0.99)")
-  optimizer: RMSprop
+  optimizer: Adam
   optimizer_args:
-    lr: 0.0003
+    lr: 0.0007
+    eps: 1.e-5
 
   gae_lambda: 0.95 # type=float, default=0.95, help="lambda coefficient in GAE formula (default: 0.95, 1 means no gae)")
-  entropy_coef: 0.001 # type=float, default=0.01, help="entropy term coefficient (default: 0.01)")
+  entropy_coef: 0.01 # type=float, default=0.01, help="entropy term coefficient (default: 0.01)")
   value_loss_coef: 0.5 # type=float, default=0.5, help="value loss term coefficient (default: 0.5)")
   max_grad_norm: 0.5 # type=float, default=0.5, help="maximum norm of gradient (default: 0.5)")
-  clip_eps: 0.1 # type=float, default=0.2, help="clipping epsilon for PPO (default: 0.2)")
+  clip_eps: 0.2 # type=float, default=0.2, help="clipping epsilon for PPO (default: 0.2)")
   epochs: 4 # type=int, default=4, help="number of epochs for PPO (default: 4)")
-  batch_size: 1024 # type=int, default=256, help="batch size for PPO (default: 256)")
+  batch_size: 256 # type=int, default=256, help="batch size for PPO (default: 256)")
   recurrence: &recurrence 1 # type=int, default=1, help="number of timesteps gradient is
   min_mem: &min_mem 0  # If min number of recurrence to use mem
   # backpropagated (default: 1)\nIf > 1, a LSTM is added to the model to have memory")
